# plugin

./: CMakeLists.txt  README.md  TODO.md  exports.yaml  functions.h  functions.yaml  ghidra-decomp-compat.h  hook-util.h  main.c  taihen-fix-next.h  taihen-updated.h  unk-gxm-text-draw-exported.c  unk-gxm-text-draw-inner.h  unk-gxm-text-draw.c  unk-gxm-text-draw.h
